# s2s

./: CMakeLists.txt  main.cpp
s2s/: S2S.cpp  S2S.h
s2s/Builtin/Functions/: Input.h  Print.cpp  Print.h  Types.h
s2s/Lexer/: Lexer.cpp  Lexer.h  LexerException.cpp  LexerException.h  LexerLine.cpp  LexerLine.h  Token.cpp  Token.h
s2s/Parser/: LineReader.h  LinesReader.h  Parser.cpp  Parser.h  Reader.h
s2s/Parser/Nodes/: ArrayNode.h  AssignmentNode.h  ClassNode.h  CompareNode.cpp  CompareNode.h  FunctionCallNode.h  FunctionNode.h  GetNode.h  IfNode.h  MemberAccessNode.h  ModifiersNode.h  ModuleImportNode.h  Nodes.h  OperationNode.cpp  OperationNode.h  ParenthesesNode.h  ParserNode.h  ReturnNode.h  SymbolNode.cpp  SymbolNode.h  ValueNode.cpp  ValueNode.h
s2s/Runtime/: Block.cpp  Block.h  Runtime.cpp  Runtime.h  RuntimeException.cpp  RuntimeException.h
s2s/Runtime/Builtin/Classes/: File.cpp  File.h  Hash.cpp  Hash.h  Path.cpp  Path.h  Process.cpp  Process.h  System.cpp  System.h
s2s/Runtime/Builtin/Functions/: Input.h  Print.h  Types.h
s2s/Runtime/Builtin/Types/: AllTypes.h  ArrayType.cpp  ArrayType.h  BoolType.h  ClassType.cpp  ClassType.h  DictionaryType.cpp  DictionaryType.h  FloatType.h  Function.cpp  Function.h  IntType.cpp  Module.cpp  Module.h  Type.cpp  (+5 more)
s2s/Runtime/GC/: GC.cpp  GC.h
s2s/Types/: ArrayType.h  BoolType.cpp  FloatType.cpp  Function.cpp  Function.h  IntType.h  StringType.cpp  Type.h
ssc/: lexer.h  parser.h  runtime.h  ssc.cpp  ssc.h
ssc/types/: array.cpp  array.h  float.cpp  float.h  number.cpp  number.h  string.cpp  string.h  type.h
(+4 files in other folders)
